--- a/index.html
+++ b/index.html
@@ -235,17 +235,17 @@
                     <div class="flex gap-1 mt-15 s-card">
                         <div class="service-card" data-aos="fade-down">
                             <h3>UI/UX</h3>
-                            <p>Winxify will effortlessly connect with your existing Winx account, allowing you to import your portfolio projects directly.
+                            <p>Winxify helps you in formulating your UI/UX Design to make your portfolio look more attractive and user-friendly.
                             </p>
                         </div>
                         <div class="service-card" data-aos="fade-up">
                             <h3>DEVELOPMENT</h3>
-                            <p>Organize your portfolio projects efficiently with built-in project management features that help you stay on track and meet deadlines.
+                            <p>Winxify helps greatly in the development of your portfolio, making it more efficient and effective.
                             </p>
                         </div>
                         <div class="service-card" data-aos="fade-down">
                             <h3>DESIGN</h3>
-                            <p> Ensure your portfolio looks stunning and functions flawlessly on all devices, from desktops to tablets and smartphones.
+                            <p> Your portfolio will be designed in a way that it will be more appealing to the audience and clients.
                             </p>
                         </div>
                     </div>
