--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <h1>WINXIFY</h1>
                             <h3>BUILDING YOUR EMPIRE DIGITALLY</h3>
                             <div class="center-btn flex">
-                                <a href="services.html" class="btn_hover1">Get Started</a>
+                                <a href="./pages/form.html" class="btn_hover1">Get Started</a>
                                 <a href="./pages/about.html" class="btn_hover2">Discover More</a>
                             </div>
                         </div>
